# llmorigen

./: .gitignore  app.py  chatbot.py  load_config.py  prepare_vectordb.py  pyproject.toml  requirements.txt  serve.py  summarizer.py  ui_settings.py  upload_file.py  utilities.py
configs/: app_config.yml
data/vectordb/uploaded/chroma/: chroma.sqlite3
templates/: chat.html  signin.html  signup.html
