[project]
name = "llmorigen"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmad",email = "ranaahmadintisar@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker (==1.9.0)",
    "click (==8.1.8)",
    "flask (==3.1.0)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.5)",
    "markupsafe (==3.0.2)",
    "werkzeug (==3.1.3)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
